# userverApp

./: CMakeLists.txt  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml  docker.yaml
configs/: config_vars.docker.yaml  config_vars.testing.yaml  config_vars.yaml  static_config.yaml
db/: pg_auth_init.sql  pg_init.sql
frontendApp/frontend_app/: package-lock.json  package.json
frontendApp/frontend_app/src/: App.js  Table.js
postgresql/data/: initial_data.sql
postgresql/schemas/: db_1.sql
public/app/: index.html  register.html  register_handler.js  sign-in.html  sing_up_handler.js
src/: hello.cpp  hello.hpp  hello_benchmark.cpp  hello_test.cpp  main.cpp  user_component.cpp  user_component.hpp  user_info_cache.hxx
src/DTO/: organization.cpp  organization.hpp  services.cpp  services.hpp  trafic_usage.cpp  trafic_usage.hpp  user.cpp  user.hpp  worker.cpp  worker.hpp  worker_traffic.cpp  worker_traffic.hpp  workstation.cpp  workstation.hpp
src/auth/: auth_bearer.cxx
src/db/: sql.hpp
src/handlers/organization/: organization_delete.cpp  organization_delete.hpp  organization_get_workers.cpp  organization_get_workers.hpp  organization_get_workstations.cpp  organization_get_workstations.hpp  organization_update.cpp  organization_update.hpp
src/handlers/services/: service_delete.cpp  service_delete.hpp  service_get.cpp  service_get.hpp  service_insert.cpp  service_insert.hpp  service_update.cpp  service_update.hpp
src/handlers/trafic_usage/: traffic_usage_delete.cpp  traffic_usage_delete.hpp  traffic_usage_get.cpp  traffic_usage_get.hpp  traffic_usage_insert.cpp  traffic_usage_insert.hpp  traffic_usage_update.cpp  traffic_usage_update.hpp
src/handlers/user/: user_delete.cpp  user_delete.hpp  user_login.cpp  user_login.hpp  user_register.cpp  user_register.hpp  user_update.cpp  user_update.hpp
src/handlers/worker/: worker_delete.cpp  worker_delete.hpp  worker_get.cpp  worker_get.hpp  worker_get_service_traffic_usage.cpp  worker_get_service_traffic_usage.hpp  worker_get_traffic_usage.cpp  worker_get_traffic_usage.hpp  worker_get_workstations.cpp  worker_get_workstations.hpp  worker_insert.cpp  worker_insert.hpp  worker_update.cpp  worker_update.hpp
src/handlers/workstation/: workstation_delete.cpp  workstation_delete.hpp  workstation_get.cpp  workstation_get.hpp  workstation_insert.cpp  workstation_insert.hpp  workstation_update.cpp  workstation_update.hpp
src/utils/: jwt.cpp  jwt.hpp
tests/: conftest.py  test_basic.py
